--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,32 @@ body {
   background-size: cover;
 }
 
+.description {
+  height: 100px;
+  margin: 0;
+  margin-top: -30px;
+  line-height: 22px;
+  color: #000;
+}
+
+.new-label {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  top: 25px;
+  margin-right: 4px;
+  margin-left: -4px;
+  background: url(/image/new-sign-01.svg) no-repeat;
+  transform: rotateZ(30deg);
+}
+
 .billboard-wrapper {
   position: relative;
   width: 640px;
   height: 520px;
   left: calc(50% - 320px);
-  top: 120px;
+  top: 80px;
 
 }
 
@@ -16,7 +36,7 @@ body {
   position: absolute;
   width: 574px;
   height: 250px;
-  top: 18px;
+  top: 4px;
   left: 15px;
   padding: 20px;
 }
@@ -48,18 +68,10 @@ body {
 #generate-button {
   position: absolute;
   bottom: 20px;
-  right: -30px;
+  right: -20px;
   background: url(/image/new-sign-01.svg) no-repeat;
   cursor: pointer;
-  width: 180px;
-  height: 130px;
+  width: 160px;
+  height: 120px;
   border: none;
-}
-
-div#generate-button {
-
-}
-
-.headline {
-  text-align: center;
 }
